--- a/front/indexS.html
+++ b/front/indexS.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MindCare | Asistente de Bienestar Mental</title>
+  <title>Turingos|Malackathon 2025</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background: linear-gradient(135deg, #e0f7f6, #ffffff);
+      background: linear-gradient(135deg, #57966f, #57966f);
       font-family: 'Inter', sans-serif;
     }
 
